Version 15

--Fixed recording and playback of Alt-tab behavior in recordedGames.

--Changed noise generator (for house tile visual effect) to use a static seed
  (ensures pixel-consistent appearance across multiple plays).




Version 14   2013-July-12

--Animals now avoid stepping next to other dead animals, unless the animal is
  player-seeking and the player is standing there.  This makes it harder to use
  the dead body of one dog as a safe spot from which to club other dogs.

--Fixed bug where placing a vault or family member on top of an object
  (removing that object) was not adjusting the current cost-of-changes display
  (thanks Paciferal).




Version 13   Live Server Fixes

--Changed cost of steel walls to 30, wired wood walls to 15, and torch to 300.

--Added a retry-transaction work-around for a server database deadlock in
  endEditHouse.




Version 13   2013-July-9

--Fixed a crash that occurred when the user mistakenly launched the v12 game
  application from the v11 folder (thanks Paciferal).

--Added empty vault sprite, and changed so that reaching an empty vault does
  not end the robbery (if owner has not edited house since last robbery).  This
  eliminates grinding that was possible through damage that was saved by
  reaching a vault repeatedly in a broken house.

--Added toggle for safe movement mode (ENTER to confirm each move) for tense
  moments (thanks TheMost).





Version 12   Live Server Fixes

--Added missing column to shadow table where dead owners' houses are held to
  prevent unexpected responses from server (thanks Gardner Marshall).

--Fixed a potential deadlock on duplicate newHouse calls when a user's house
  does not yet exist.

--Changed so that vault stops earning money after it is reached by robbers
  twice (until the next owner repair).





Version 12     2013-July-4

--Animals now only start moving after the player sees them, making it
  impossible for a never-visible animal to move around behind the walls and